--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  min-height: 15vh;
 }
 
 nav h1 {
@@ -58,4 +57,8 @@ button {
   display: inline-block;
   margin: 10px;
   cursor: pointer;
+}
+
+#adobe-dc-view {
+  height: calc(100vh - 50px);
 }
